Agrgado logica a vistas restantes: Proveedores/Productos